--- a/Main/css/style.css
+++ b/Main/css/style.css
@@ -3,13 +3,17 @@
     padding: 0px;
     box-sizing: border-box;
 }
+/* ნავიგაციის მენიუ */
 nav{
+    position: fixed;
+    width:100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     min-height:8vh;
     background-color: #5d4954;
     font-family: 'Poppins', sans-serif;
+    z-index: 999;
 }
 .logo{
     color:rgb(226, 226, 226);
@@ -50,6 +54,9 @@ nav{
     border: 1px transparent;
     padding: 5px;
 }
+.nav-links b{
+    display: none;
+}
 /*Burger მენუ რომ არ გამოჩნდეს კომპიუტერზე*/
 .burger{
     display:none;
@@ -65,6 +72,7 @@ nav{
     position: relative;
     text-align: center;
     color: white;
+    z-index:1;
   }
   .title{ /*მობილურის ვერსიაზე ბურგერ მენიუ რომ გამოდის ვერ ფარავს ამ სათაურს და Log in Register-ს*/
     position:absolute;
@@ -90,23 +98,175 @@ nav{
       font-size: 30px;
   }
 .banner{ 
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../images/caucasus1.jpg);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 700px;
     width: 100%;
-    display: block;
+    background-repeat: no-repeat;
 }
-.banner .banner-image{
+/* სელექტები */
+h1{
+    margin: 16px;
+    margin-left: 50px;
+}
+h2{
+    margin: 16px;
+    /* float: left; */
+}
+.select-container{
+    background-color: #5d4954;
+    margin-top:0px;
+    padding: 32px;
+    height: 280px;
+    width: max-content;
+    position:relative;
+    left:25%;
+    right:25%;
+}
+.select-box{
+    position:relative;
+    display: flex;
+    width: 400px;
+    flex-direction: column;
+    float: left;
+    padding: 32px; /**/ 
+    /* width:max-content; */
+}
+.select-box .options-container{
+    background: #2f3640;
+    color: #f5f6fa;
+    max-height: 0;
     width: 100%;
-    display: block;
-    height: auto;
+    opacity:0;
+    transition: all 0.4s;
+    border-radius: 8px;
+    overflow: hidden;
+    order: 1;
+    position: absolute; 
+    z-index:100;
 }
-@media screen and (max-width:1024px){
+.selected{
+    background: #2f3640;
+    border-radius: 8px;
+    margin-bottom: 8px;
+    color: #f5f6fa;
+    position: relative;
+    order: 0;
+}
+.selected::after{
+    content:"";
+    background: url(../images/down-arrow.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    height:100%;
+    width: 32px;
+    right: 10px;
+    top: 5px;
+    transition: all 0.4s;
+}
+.select-box .options-container.active{
+    max-height: 240px;
+    opacity: 1;
+    overflow-y: scroll;
+    margin-top:160px;
+    width:335px; /**/
+    /* margin-left: 32px;  */
+}
+.select-box .options-container.active + .selected::after{
+    transform: rotateX(180deg);
+    top: -6px;
+}
+.select-box .options-container::-webkit-scrollbar{
+    width: 8px;
+    background: #0d141f;
+    border-radius: 0 8px 8px 0;
+}
+.select-box .options-container::-webkit-scrollbar-thumb{
+    background: #525861;
+    border-radius: 0 8px 8px 0;
+}
+.select-box .option, .selected{
+    padding: 12px 24px;
+    cursor: pointer;
+}
+.select-box .option:hover{
+    background: #414b57;
+}
+.select-box label{
+    cursor: pointer;
+}
+.select-box .option .radio{
+    display: none;
+}
+.search-box input{
+    width:100%;
+    padding: 12px 16px;
+    font-family: "Roboto", sans-serif;
+    font-size:16px;
+    position: absolute;
+    border-radius: 8px 8px 0 0;
+    z-index: 100;
+    border: 8px solid #2f3640;
+    opacity:0;
+    pointer-events: none;
+    transition: all 0.4s;
+    /* margin-left: 32px;  */
+    width:335px;
+}
+.search-box input:focus{
+    outline:none;
+}
+.select-box .options-container.active ~ .search-box input{
+    opacity: 1;
+    pointer-events: auto;
+}
+.Select-Button{
+    font-size:16px;
+    padding:8px 24px;
+    border-radius: 8px;
+    margin-top: 16px;
+    border: 0;
+    background-color: #e74c3c;
+    color: #f5f6fa;
+    cursor: pointer;
+    float: right;
+    margin-top:100px;
+}
+@media screen and (max-width:1381px){
     .nav-links{
         width: 60%;
     }
-}
-/*რესპონსივისთვის*/
-@media screen and (max-width:768px){
-    .title{ 
-        opacity:0;
+    .select-container{
+        width:100%;
+        left:0%;
+    }
+    /* .button{
+        display: none;
+    }
+    .select-box .options-container{
+        /* position absolute როცა წერია მობაილში არ მუშაობს და უნდა გავასწოროთ 
+        position: relative;
+    }
+    .select-box .options-container.active{
+        margin-top:50px;
+    }
+    .select-container{
+        padding-top: 20px;
+        height: 400px;
+    }
+    .select-box{
+        display: flex;
+        width: 200px;
+        flex-direction: column;
+        overflow-x:hidden;
+        padding: 0px;
+    }*/
+
+    /*.title{ 
+        opacity:1;
     }
     body{
         overflow-x: hidden;
@@ -134,6 +294,67 @@ nav{
     .burger{
         display: block;
         cursor: pointer;
+    }
+    .button{
+        display: none;
+    }
+.nav-active{
+    transform: translate(0%);
+}
+}*/
+/*რესპონსივისთვის*/
+@media screen and (max-width:768px){
+    .select-box .options-container{
+        /* position absolute როცა წერია მობაილში არ მუშაობს და უნდა გავასწოროთ */
+        position: relative;
+    }
+    .select-box .options-container.active{
+        margin-top:50px;
+    }
+    .select-container{
+        padding-top: 20px;
+        height: 400px;
+    }
+    .select-box{
+        display: flex;
+        width: 200px;
+        flex-direction: column;
+        overflow-x:hidden;
+        padding: 0px;
+    }
+
+    .title{ 
+        opacity:1;
+    }
+    body{
+        overflow-x: hidden;
+    }
+    .nav-links{
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: #5d4954;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translate(100%);
+        transition: transform 0.5s ease-in;
+    }
+    .nav-links li{
+        opacity:0;
+    }
+    .nav-links li a:hover{
+        background-color: white;
+        color: black;
+    }
+    .burger{
+        display: block;
+        cursor: pointer;
+    }
+    .button{
+        display: none;
     }
 .nav-active{
     transform: translate(0%);
