--- a/Main/css/style.css
+++ b/Main/css/style.css
@@ -77,7 +77,7 @@ nav{
   .title{ /*მობილურის ვერსიაზე ბურგერ მენიუ რომ გამოდის ვერ ფარავს ამ სათაურს და Log in Register-ს*/
     position:absolute;
     top: 50%;
-    left: 50%;
+    left: 55%;
     bottom: 100px;
     transform: translate(-50%, -50%);
     font-family: 'Knewave', cursive;
@@ -302,7 +302,8 @@ h2{
     transform: translate(0%);
 }
 }*/
-/*რესპონსივისთვის*/
+/*რესპონსივისთვის*/ 
+}
 @media screen and (max-width:768px){
     .select-box .options-container{
         /* position absolute როცა წერია მობაილში არ მუშაობს და უნდა გავასწოროთ */
@@ -359,6 +360,7 @@ h2{
 .nav-active{
     transform: translate(0%);
 }
+}
 /*Burger მენიუში ნელ-ნელა რომ ამოვიდეს ლინკები*/
 @keyframes navLinkFade{
     from{
@@ -380,3 +382,73 @@ h2{
 .toggle .line3{
     transform: rotate(45deg) translate(-5px,-6px);
 }
+  .text{
+    background-color: #f8f6f6;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 5vw;
+  text-shadow: 4px 4px 0px #00070f;
+  mix-blend-mode: screen;
+  animation: fadeIn 2.5s linear forwards;
+}
+    
+.oswald{
+    font-family: 'Oswald', sans-serif;
+ }
+ 
+ h4{
+     font-size:2em;
+ }
+ p{
+     font-size:1.3em;
+     line-height:1.1em;
+ }
+ .card {
+   width: 30%; 
+   height: 300px;
+   float: left;
+  width: 33.33%;
+  padding: 20px;
+   color:#D6D600;
+   
+ }
+ 
+ .card-img {
+   width: 100%;
+   height: 100%;
+   background-color: black; 
+   background-position: center;
+   background-size: cover;
+   transition:all 0.3s ease-in-out;
+   opacity:1;
+   border: 5px solid #555;
+ }
+ .card:hover .card-img,
+ .card:focus .card-img {
+   transform: scale(1.02);
+   opacity:0.5;
+ }
+ 
+ .card:hover .card-img-overlay{
+     color:#080a7e;
+ }
+ 
+ .card-img-overlay>h4, .card-img-overlay>p{
+     visibility:hidden;
+ }
+ 
+ .card-img-overlay:hover h4, .card-img-overlay:hover p{
+     visibility: visible;
+ }
+ 
+ .card:hover .card-img-overlay p{
+     font-size:1.5em;
+     letter-spacing:0.02em;
+ }
+ 
+
+ 
