--- a/Main/css/style.css
+++ b/Main/css/style.css
@@ -11,9 +11,9 @@ nav{
     justify-content: space-around;
     align-items: center;
     min-height:8vh;
-    background-color: #5d4954;
+    /* background-color: #5d4954; */
     font-family: 'Poppins', sans-serif;
-    z-index: 999;
+    z-index: 10;
 }
 .logo{
     color:rgb(226, 226, 226);
@@ -38,7 +38,6 @@ nav{
 .nav-links li{
     list-style: none;
     display: inline-block;
-    
 }
 .nav-links li a:hover{
     background-color: white;
@@ -77,19 +76,163 @@ nav{
   .title{ /*მობილურის ვერსიაზე ბურგერ მენიუ რომ გამოდის ვერ ფარავს ამ სათაურს და Log in Register-ს*/
     position:absolute;
     top: 50%;
-    left: 55%;
+    left: 50%;
     bottom: 100px;
     transform: translate(-50%, -50%);
     font-family: 'Knewave', cursive;
     color: rgb(226, 226, 226);
     font-size: 40px;
   }
-  .button{
+  .show-btn{
+      background: none;
+      padding: 10px 20px;
+      font-size: 20px;
+      font-weight: 500;
+      color: #3498db;
+      cursor: pointer;
+      box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+      border-radius: 50%;
+      background-color: #fff;
+  }
+  /*.show-btn,*/ .SignUpContainer{
     position:absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
+  /* .show-btn{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  } */
+  input[type="checkbox"]{
+      display: none;
+  }
+  .SignUpContainer{
+      background: #fff;
+      z-index: 11;
+      display: none;
+      width: 400px;
+      padding: 30px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.4);
+  }
+  #show:checked ~ .SignUpContainer{
+      display: block;
+  }
+  .SignUpContainer .close-btn /*,
+  .SignInContainer .close-btn*/{
+      position: absolute;
+      right: 20px;
+      top:15px;
+      font-size: 18px;
+      cursor: pointer;
+  }
+  .SignUpContainer .close-btn:hover/*,
+  .SignInContainer .close-btn:hover*/{
+      color: #3498db;
+  }
+  .SignUpContainer .SignUpText /*,
+  .SignInContainer .SignInText*/{
+    font-size: 35px;
+    font-weight: 600;
+    text-align: center;
+  }
+  .SignUpContainer form
+  /*.SignInContainer form*/{
+      margin-top: -20px;
+  }
+  .SignUpContainer form .data
+  /*.SignInContainer form .data*/{
+    height: 45px;
+    width: 100%;
+    margin: 40px 0;
+  }
+  form .data label{
+      font-size: 18px;
+  }
+  form .data input{
+      height: 100%;
+      width: 100%;
+      padding-left: 10px;
+      font-size: 17px;
+      border: 1px solid silver;
+  }
+  form .data input:focus{
+      border-color: #3498db;
+      border-bottom-width: 2px;
+  }
+  form .forgot-pass{
+      margin-top: -8px;
+  }
+  form .forgot-pass a{
+    color: #3498db;
+    text-decoration: none;
+}
+form .forgot-pass a:hover{
+    text-decoration: underline;
+}
+  form .SignUpbtn
+  /*form .SignInbtn*/{
+      margin: 30px 0;
+      height: 45px;
+      width: 100%;
+      position: relative; /*SignUp/In ფერსითვის*/
+      overflow: hidden;
+  }
+  form .SignUpbtn .inner/*,
+  form .SignInbtn .inner*/{
+    height: 100%;
+    width: 300%;
+    position: absolute;
+    left: -100%;
+    z-index: -1;
+    transition: all 0.4s;
+    background: #5d4954
+  }
+  form .SignUpbtn:hover .inner/*,
+  form .SignInbtn:hover .inner*/{
+    left:0;
+  }
+  form .SignUpbtn button/*,
+  form .SignInbtn button*/{
+      height: 100%;
+      width: 100%;
+      background: none;
+      border: none;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 500;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      cursor: pointer;
+  }
+  form .signUp-link/*,
+  form .signIn-link*/{
+      text-align: center;
+  }
+  form .signUp-link label/*
+  form .signIn-link a*/{
+      color: #3498db;
+      text-decoration: none;
+      /* cursor: pointer; */
+  }
+  form .signUp-link label:hover/*,
+  form .signIn-link a:hover*/{
+      text-decoration: underline;
+  }
+  /* .SignInContainer{
+      position:absolute;
+      top:50%;
+      left:50%;
+      transform: translate(-50%, -50%);
+  }
+  .SignInContainer{
+      background: #fff;
+      display:none;
+      width: 410px;
+      padding: 30px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+  } */
   .btn{
       border: 1 px solid #fff;
       padding: 10px 30px;
@@ -106,6 +249,105 @@ nav{
     width: 100%;
     background-repeat: no-repeat;
 }
+.SignUpContainer2{
+    position: absolute;
+    /* opacity:0; */
+    top: 44%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.SignUpContainer2{
+    z-index: 11;
+    display: none;
+    background: #fff;
+    width: 410px;
+    padding: 30px;
+    box-shadow: 0 0 8px rgba(0,0,0,0.4);
+}
+#show2:checked ~ .SignUpContainer2{
+    display: block;
+}
+.SignUpContainer2 .close-btn2{
+    position: absolute;
+    right: 20px;
+    /* left: 15px; */
+    font-size: 18px;
+    cursor: pointer;
+}
+.SignUpContainer2 .close-btn2:hover{
+    color: #3498db;
+}
+.SignUpContainer2 .SignUpText2{
+    font-size: 35px;
+    font-weight: 600;
+    text-align: center;
+}
+.SignUpContainer2 form{
+    margin-top: -20px;
+}
+.SignUpContainer2 form .data2{
+    height: 45px;
+    width: 100%;
+    margin: 40px 0;
+}
+form .data2 label{
+    font-size: 18px;
+
+}
+form .data2 input{
+    height: 100%;
+    width: 100%;
+    padding-left: 10px;
+    font-size: 17px;
+    border: 1px solid silver;
+}
+form .data2 input:focus{
+    border-color: #3498db;
+    border-bottom-width: 2px;
+}
+form .SignUpbtn2{
+    margin: 30px 0;
+    height: 45px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+form .SignUpbtn2 .inner2{
+    height: 100%;
+    width: 300%;
+    position: absolute;
+    left: -100%;
+    z-index: -1;
+    background: #5d4954;
+    transition: all 0.4s;
+}
+form .SignUpbtn2:hover .inner2{
+    left: 0;
+}
+form .SignUpbtn2 button{
+    height: 100%;
+    width: 100%;
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+form .signIn-Link{
+    text-align: center;
+}
+form .signIn-Link label{
+    color: #3498db;
+    text-decoration: none;
+    cursor: pointer;
+}
+form .signIn-Link label:hover{
+    text-decoration: underline;
+}
+
 /* სელექტები */
 h1{
     margin: 16px;
@@ -235,7 +477,16 @@ h2{
     float: right;
     margin-top:100px;
 }
+@media screen and (max-width:1600px){
+    /* nav{
+        background-color: #5d4954;
+    } */
+    
+}
 @media screen and (max-width:1381px){
+    /* nav{
+        background-color: #5d4954;
+    } */
     .nav-links{
         width: 60%;
     }
@@ -243,6 +494,7 @@ h2{
         width:100%;
         left:0%;
     }
+}
     /* .button{
         display: none;
     }
@@ -302,9 +554,12 @@ h2{
     transform: translate(0%);
 }
 }*/
-/*რესპონსივისთვის*/ 
-}
+/*რესპონსივისთვის*/
+
 @media screen and (max-width:768px){
+    nav{
+        background-color: #5d4954;
+    }
     .select-box .options-container{
         /* position absolute როცა წერია მობაილში არ მუშაობს და უნდა გავასწოროთ */
         position: relative;
@@ -321,7 +576,8 @@ h2{
         width: 200px;
         flex-direction: column;
         overflow-x:hidden;
-        padding: 0px;
+        overflow-y: hidden;
+        padding: 10px;
     }
 
     .title{ 
@@ -382,7 +638,7 @@ h2{
 .toggle .line3{
     transform: rotate(45deg) translate(-5px,-6px);
 }
-  .text{
+.text{
     background-color: #f8f6f6;
     display: flex;
     height: 100%;
@@ -449,6 +705,4 @@ h2{
      font-size:1.5em;
      letter-spacing:0.02em;
  }
- 
-
  
