--- a/Main/css/style.css
+++ b/Main/css/style.css
@@ -27,9 +27,10 @@ nav{
     color:rgb(226, 226, 226);
 }
 .nav-links{
-    display:flex;
+    display:flex;   
+    align-items: center;
     justify-content: space-around;
-    width:30%;
+    width: 45%;
 }
 .nav-links li.active a{
     background-color: white;
@@ -48,7 +49,7 @@ nav{
     text-decoration:none;
     letter-spacing: 1px;
     font-weight:bold;
-    font-size:14px;
+    font-size:16px;
     transition: 0.6s ease;
     border: 1px transparent;
     padding: 5px;
