--- a/Main/css/style.css
+++ b/Main/css/style.css
@@ -112,7 +112,7 @@ nav{
   .SignUpContainer{
       background: #fff;
       z-index: 11;
-      display: none;
+      /* display: none; */
       width: 400px;
       padding: 30px;
       box-shadow: 0 0 8px rgba(0,0,0,0.4);
