--- a/Main/css/userCSS.css
+++ b/Main/css/userCSS.css
@@ -176,7 +176,8 @@ h2{
     padding: 7px 15px;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, .2);
     cursor: pointer;
-    margin-top: 15px;
+    margin-left: 30%;
+    margin-top: 50px;
 }
 .tab-show{
     display:none;
