--- a/Main/css/userCSS.css
+++ b/Main/css/userCSS.css
@@ -72,7 +72,7 @@ body{
 }
 /* USER INTERFACE */
 .user-interface h1{
-    padding-top: 200px;
+    padding-top: 150px !important;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -84,10 +84,10 @@ body{
 .user-main-container{
     background: #fff;
     width: 540px;
-    height: 500px;
+    height: 450px;
     margin: 0 auto;
     position: relative;
-    margin-top: 150px;
+    margin-top: 50px;
     box-shadow: 2px 5px 20px rgba(119, 119, 119, .5);
 }
 .left-box{
