--- a/Main/css/AboutGeorgiaNatureStyle.css
+++ b/Main/css/AboutGeorgiaNatureStyle.css
@@ -90,6 +90,16 @@ nav{
     font-weight: bold;
     text-transform: uppercase;
 }
+.Mountains h3{
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 40px;
+    font-size:24px;
+    font-family: 'Mountains of Christmas', cursive;
+    color:#fff;
+    font-weight: bold;
+    text-transform: uppercase;
+}
 .MountainContent{
     display:flex;
     flex-direction: column;
@@ -102,7 +112,8 @@ nav{
 .Mountainsimg img{
     border-radius: 12px;
 }
-.MountainContent p{
+.MountainContent p,
+.Mountains p{
     padding: 20px;
     color: #fff;
     font-size: 24px;
@@ -155,6 +166,15 @@ nav{
     margin-bottom: 40px;
     outline: none;
     cursor:pointer;
+}
+@media screen and (max-width:565px){
+    .Mountains h1{
+        width: 100%;
+        font-size: 48px;
+    }
+    .Mountainsimg img{
+        width: 100%;
+    }
 }
 @media screen and (max-width:1381px){
     .nav-links{
