--- a/Main/css/style.css
+++ b/Main/css/style.css
@@ -2,7 +2,12 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    background-color: none;
 }
+::selection {
+    color: #fff;
+    background: red;
+  }
 /* ნავიგაციის მენიუ */
 nav{
     position: fixed;
@@ -68,12 +73,25 @@ nav{
     margin: 5px;
     transition: all 0.3s ease;
 }
-.container {
+.videoheader{
+    height: 100vh;
+}
+.videobackground{
+    position:absolute;
+    right:0;
+    bottom:0;
+    min-width: 100%;
+    min-height: 100%;
+    width:auto;
+    height:auto;
+    z-index: -100;
+}
+/* .container {
     position: relative;
     text-align: center;
     color: white;
     z-index:1;
-  }
+  } */
   .title{ /*მობილურის ვერსიაზე ბურგერ მენიუ რომ გამოდის ვერ ფარავს ამ სათაურს და Log in Register-ს*/
     position:absolute;
     top: 50%;
@@ -83,169 +101,13 @@ nav{
     font-family: 'Knewave', cursive;
     color: rgb(226, 226, 226);
     font-size: 40px;
-  }
-  .show-btn{
-      background: none;
-      padding: 10px 20px;
-      font-size: 20px;
-      font-weight: 500;
-      color: #3498db;
-      cursor: pointer;
-      box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-      border-radius: 50%;
-      background-color: #fff;
-  }
- /* .SignUpContainer{
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  } */
-  /* .show-btn{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  } */
-  input[type="checkbox"]{
-      display: none;
-  }
-  .SignUpContainer{
-      background: #fff;
-      z-index: 11;
-      display: none; 
-      width: 400px;
-      padding: 30px;
-      box-shadow: 0 0 8px rgba(5, 4, 4, 0.4);
-      position:absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-  }
-  /* #show:checked ~ .SignUpContainer{
-      display: block;
-  } */
-  .SignUpContainer .close-btn /*,
-  .SignInContainer .close-btn*/{
-      position: absolute;
-      right: 20px;
-      top:15px;
-      font-size: 18px;
-      cursor: pointer;
-  }
-  .SignUpContainer .close-btn:hover/*,
-  .SignInContainer .close-btn:hover*/{
-      color: #3498db;
-  }
-  .SignUpContainer .SignUpText /*,
-  .SignInContainer .SignInText*/{
-    font-size: 35px;
-    font-weight: 600;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
     text-align: center;
+    width:100%;
   }
-  .SignUpContainer form
-  /*.SignInContainer form*/{
-      margin-top: -20px;
-  }
-  .SignUpContainer form .data
-  /*.SignInContainer form .data*/{
-    height: 45px;
-    width: 100%;
-    margin: 40px 0;
-  }
-  form .data label{
-      font-size: 18px;
-  }
-  form .data input{
-      height: 100%;
-      width: 100%;
-      padding-left: 10px;
-      font-size: 17px;
-      border: 1px solid silver;
-  }
-  form .data input:focus{
-      border-color: #3498db;
-      border-bottom-width: 2px;
-  }
-  form .forgot-pass{
-      margin-top: -8px;
-  }
-  form .forgot-pass a{
-    color: #3498db;
-    text-decoration: none;
-}
-form .forgot-pass a:hover{
-    text-decoration: underline;
-}
-  form .SignUpbtn
-  /*form .SignInbtn*/{
-      margin: 30px 0;
-      height: 45px;
-      width: 100%;
-      position: relative; /*SignUp/In ფერსითვის*/
-      overflow: hidden;
-  }
-  form .SignUpbtn .inner/*,
-  form .SignInbtn .inner*/{
-    height: 100%;
-    width: 300%;
-    position: absolute;
-    left: -100%;
-    z-index: -1;
-    transition: all 0.4s;
-    background: #5d4954
-  }
-  form .SignUpbtn:hover .inner/*,
-  form .SignInbtn:hover .inner*/{
-    left:0;
-  }
-  form .SignUpbtn button/*,
-  form .SignInbtn button*/{
-      height: 100%;
-      width: 100%;
-      background: none;
-      border: none;
-      color: #fff;
-      font-size: 18px;
-      font-weight: 500;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      cursor: pointer;
-  }
-  form .signUp-link/*,
-  form .signIn-link*/{
-      text-align: center;
-  }
-  form .signUp-link label/*
-  form .signIn-link a*/{
-      color: #3498db;
-      text-decoration: none;
-      /* cursor: pointer; */
-  }
-  form .signUp-link label:hover/*,
-  form .signIn-link a:hover*/{
-      text-decoration: underline;
-  }
-  /* .SignInContainer{
-      position:absolute;
-      top:50%;
-      left:50%;
-      transform: translate(-50%, -50%);
-  }
-  .SignInContainer{
-      background: #fff;
-      display:none;
-      width: 410px;
-      padding: 30px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-  } */
-  .btn{
-      border: 1 px solid #fff;
-      padding: 10px 30px;
-      color: rgb(226, 226, 226);
-      text-decoration: none;
-      font-size: 30px;
-  }
-.banner{ 
+  /* .banner{ 
     background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../images/caucasus1.jpg);
     background-position: center;
     background-attachment: fixed;
@@ -253,239 +115,213 @@ form .forgot-pass a:hover{
     height: 700px;
     width: 100%;
     background-repeat: no-repeat;
-}
-.SignUpContainer2{
-    position: absolute;
-    /* opacity:0; */
-    top: 44%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.SignUpContainer2{
-    z-index: 11;
-    display: none;
-    background: #fff;
-    width: 410px;
-    padding: 30px;
-    box-shadow: 0 0 8px rgba(0,0,0,0.4);
-}
-#show2:checked ~ .SignUpContainer2{
-    display: block;
-}
-.SignUpContainer2 .close-btn2{
-    position: absolute;
-    right: 20px;
-    /* left: 15px; */
-    font-size: 18px;
-    cursor: pointer;
-}
-.SignUpContainer2 .close-btn2:hover{
-    color: #3498db;
-}
-.SignUpContainer2 .SignUpText2{
-    font-size: 35px;
-    font-weight: 600;
-    text-align: center;
-}
-.SignUpContainer2 form{
-    margin-top: -20px;
-}
-.SignUpContainer2 form .data2{
-    height: 45px;
-    width: 100%;
-    margin: 40px 0;
-}
-form .data2 label{
-    font-size: 18px;
+} */
 
-}
-form .data2 input{
-    height: 100%;
-    width: 100%;
-    padding-left: 10px;
-    font-size: 17px;
-    border: 1px solid silver;
-}
-form .data2 input:focus{
-    border-color: #3498db;
-    border-bottom-width: 2px;
-}
-form .SignUpbtn2{
-    margin: 30px 0;
-    height: 45px;
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-}
-form .SignUpbtn2 .inner2{
-    height: 100%;
-    width: 300%;
-    position: absolute;
-    left: -100%;
-    z-index: -1;
-    background: #5d4954;
-    transition: all 0.4s;
-}
-form .SignUpbtn2:hover .inner2{
-    left: 0;
-}
-form .SignUpbtn2 button{
-    height: 100%;
-    width: 100%;
-    background: none;
-    border: none;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
+.spotlight h1{
+    font-size: 64px;
     text-transform: uppercase;
-    letter-spacing: 1px;
-    cursor: pointer;
+    font-weight: bold;
+    color: #111112;
+    text-align: center;
+    margin-top: 50px;
+    font-family: 'Kaushan Script', cursive;
 }
-form .signIn-Link{
+.cardcontainer{
+    font-family: 'Lato', sans-serif;
+    max-width: 1000px;
+    min-height: 100vh;
+    width: 100%;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 50px;
+}
+.cardbox{
+    max-width: 500px;
+    min-height: 250px;
+    position: relative;
+    cursor: pointer;
+    transition: transform 0.2s ease-in;
+    padding: 20px;
+}
+.cardbox .thumb{
+    max-width: 250px;
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+    position:relative;
+    border-radius: 50%;
+    float:left;
+    shape-outside: circle();
+    margin-right: 20px;
+    transition: transform 0.2s;
+}
+.cardbox button{
+    cursor: pointer;
+    height: 40px;
+    width: 100px;
+    background-color: none;
+    text-align: center;
+    color: #000;
+    /* font-family: 'Kaushan Script'; */
+    font-size: 16px;
+    background: none;
+    cursor: pointer;
+    border: 2px solid #000;
+    border-radius: 16px;
+}
+.cardbox button:hover{
+    background-color: #5CB9B1;
+    color: #fff;
+    border: none;
+}
+.thumb img{
+    width: 100%;
+    height: 100%;
+    display:block;
+    object-fit: cover;
+}
+.cardbox:hover .thumb{
+    transform: translateY(-5px);
+}
+.cardbox .cardtext{
+    padding-top: 20px;
+}
+.cardbox .cardtext h2{
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+.cardbox .cardtext p{
+    margin: 15px 0;
+}
+.cardbox .cardtext a{
+    text-decoration: none;
+}
+.cardbox .cardtext a:hover{
+    color: crimson;
+}
+.destinationsection{
+    display:flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 20px;
+    background-color: #5CB9B1;
+    justify-content: center;
+    text-align: center;
+    height: 600px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.destinationheader{
+    margin-right: 50px;
+    position: relative;
+    top: 150px;
+}
+.destinationheader h1{
+    font-family: 'Kaushan Script', cursive;
+    font-size: 48px;
+    color: #fff;
+    margin-bottom: 50px;
+    /* position: relative;
+    top:100px; */
+}
+.destinationheader p{
+    font-size: 24px;
+    color:#fff;
+    /* position: relative;
+    top: 150px; */
+    font-family: 'KoHo', sans-serif;
+    margin-bottom: 50px;
+}
+.destinationsection button{
+    height: 40px;
+    width: 300px;
+    border-radius: 32px;
+    text-align: center;
+    color: #fff;
+    font-family: 'Kaushan Script';
+    font-size: 24px;
+    background: none;
+    cursor: pointer;
+    border: 2px solid white;
+}
+.destinationsection button:hover{
+    background: #fff;
+    color: #000;
+    border: none;
+}
+.destinationmap img{
+    position: relative;
+    top: 100px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+}
+.gallery{
+    margin-top: 50px;
+    margin: 10px 50px;
+    justify-content: center;
     text-align: center;
 }
-form .signIn-Link label{
-    color: #3498db;
-    text-decoration: none;
-    cursor: pointer;
+.gallery img{
+    transition: 1s;
+    padding: 5px;
+    width: 300px;
+    height: 200px;
 }
-form .signIn-Link label:hover{
-    text-decoration: underline;
+.gallery img:hover{
+    filter: grayscale(100%);
+    transform: scale(1.1);
 }
-
-/* სელექტები */
-h1{
-    margin: 16px;
-    margin-left: 50px;
-}
-h2{
-    margin: 16px;
-    /* float: left; */
-}
-.select-container{
-    background-color: grey;
-    margin-top:15px;
-    padding: 32px;
-    height: 280px;
-    width: max-content;
-    position:relative;
-    left:21%;
-}
-.select-box{
-    position:relative;
-    display: flex;
-    width: 400px;
-    flex-direction: column;
-    float: left;
-    padding: 32px; /**/ 
-    /* width:max-content; */
-}
-.select-box .options-container{
-    background: #2f3640;
-    color: #f5f6fa;
-    max-height: 0;
-    width: 100%;
-    opacity:0;
-    transition: all 0.4s;
-    border-radius: 8px;
-    overflow: hidden;
-    order: 1;
-    position: absolute; 
-    z-index:100;
-}
-.selected{
-    background: #2f3640;
-    border-radius: 8px;
-    margin-bottom: 8px;
-    color: #f5f6fa;
-    position: relative;
-    order: 0;
-}
-.selected::after{
-    content:"";
-    background: url(../images/down-arrow.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: absolute;
-    height:100%;
-    width: 32px;
-    right: 10px;
-    top: 5px;
-    transition: all 0.4s;
-}
-.select-box .options-container.active{
-    max-height: 240px;
-    opacity: 1;
-    overflow-y: scroll;
-    margin-top:160px;
-    width:335px; /**/
-    /* margin-left: 32px;  */
-}
-.select-box .options-container.active + .selected::after{
-    transform: rotateX(180deg);
-    top: -6px;
-}
-.select-box .options-container::-webkit-scrollbar{
-    width: 8px;
-    background: #0d141f;
-    border-radius: 0 8px 8px 0;
-}
-.select-box .options-container::-webkit-scrollbar-thumb{
-    background: #525861;
-    border-radius: 0 8px 8px 0;
-}
-.select-box .option, .selected{
-    padding: 12px 24px;
-    cursor: pointer;
-}
-.select-box .option:hover{
-    background: #414b57;
-}
-.select-box label{
-    cursor: pointer;
-}
-.select-box .option .radio{
-    display: none;
-}
-.search-box input{
-    width:100%;
-    padding: 12px 16px;
-    font-family: "Roboto", sans-serif;
-    font-size:16px;
-    position: absolute;
-    border-radius: 8px 8px 0 0;
-    z-index: 100;
-    border: 8px solid #2f3640;
-    opacity:0;
-    pointer-events: none;
-    transition: all 0.4s;
-    /* margin-left: 32px;  */
-    width:335px;
-}
-.search-box input:focus{
-    outline:none;
-}
-.select-box .options-container.active ~ .search-box input{
-    opacity: 1;
-    pointer-events: auto;
-}
-.Select-Button{
-    font-size:16px;
-    padding:8px 24px;
-    border-radius: 8px;
-    margin-top: 16px;
-    border: 0;
-    background-color: #e74c3c;
-    color: #f5f6fa;
-    cursor: pointer;
-    float: right;
-    margin-top:95px;
-}
-@media screen and (max-width:1600px){
-    /* nav{
-        background-color: #5d4954;
+/* @media screen and (max-width:830px){
+    .destinationsection{
+        height: 200px;
+    }
+    /* .destinationmap img{
+        display: none;
+        /* opacity: 0; 
+    } 
+} */
+@media screen and (max-width:1329px){
+    .destinationsection{
+        display: flex;
+        flex-direction: column;
+        height: 1200px;
+    }
+    .destinationheader{
+        top: 0px;
+    }
+    /* .destinationmap{
+        background: url(../images/georgiaSouthOssetiaHigh\ \(4\).png);
     } */
-    
+}
+@media (min-aspect-ratio:16/9)
+{
+    .videobackground{
+        width:100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ratio:16/9)
+{
+    .videobackground{
+        width: auto;
+        height: 100%;
+    }
+}
+@media (max-width:500px){
+    .cardbox .thumb{
+        float:none;
+        margin: auto;
+    }
+    .cardbox .cardtext{
+        padding: 0;
+        margin: 15px;
+    }
 }
 @media screen and (max-width:1381px){
     /* nav{
@@ -499,66 +335,6 @@ h2{
         left:0%;
     }
 }
-    /* .button{
-        display: none;
-    }
-    .select-box .options-container{
-        /* position absolute როცა წერია მობაილში არ მუშაობს და უნდა გავასწოროთ 
-        position: relative;
-    }
-    .select-box .options-container.active{
-        margin-top:50px;
-    }
-    .select-container{
-        padding-top: 20px;
-        height: 400px;
-    }
-    .select-box{
-        display: flex;
-        width: 200px;
-        flex-direction: column;
-        overflow-x:hidden;
-        padding: 0px;
-    }*/
-
-    /*.title{ 
-        opacity:1;
-    }
-    body{
-        overflow-x: hidden;
-    }
-    .nav-links{
-        position: absolute;
-        right: 0px;
-        height: 92vh;
-        top: 8vh;
-        background-color: #5d4954;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50%;
-        transform: translate(100%);
-        transition: transform 0.5s ease-in;
-    }
-    .nav-links li{
-        opacity:0;
-    }
-    .nav-links li a:hover{
-        background-color: white;
-        color: black;
-    }
-    .burger{
-        display: block;
-        cursor: pointer;
-    }
-    .button{
-        display: none;
-    }
-.nav-active{
-    transform: translate(0%);
-}
-}*/
-/*რესპონსივისთვის*/
 
 @media screen and (max-width:768px){
     nav{
@@ -621,7 +397,6 @@ h2{
     transform: translate(0%);
 }
 }
-/*Burger მენიუში ნელ-ნელა რომ ამოვიდეს ლინკები*/
 @keyframes navLinkFade{
     from{
         opacity: 0;
@@ -642,72 +417,3 @@ h2{
 .toggle .line3{
     transform: rotate(45deg) translate(-5px,-6px);
 }
-.text{
-    background-color: #f8f6f6;
-    display: flex;
-    height: 100%;
-    width: 100%;
-    padding: 1rem;
-    justify-content: center;
-    align-items: center;
-    font-size: 5vw;
-  text-shadow: 4px 4px 0px #00070f;
-  mix-blend-mode: screen;
-  animation: fadeIn 2.5s linear forwards;
-}
-    
-.oswald{
-    font-family: 'Oswald', sans-serif;
- }
- 
- h4{
-     font-size:2em;
- }
- p{
-     font-size:1.3em;
-     line-height:1.1em;
- }
- .card {
-   width: 30%; 
-   height: 300px;
-   float: left;
-  width: 33.33%;
-  padding: 20px;
-   color:#D6D600;
-   
- }
- 
- .card-img {
-   width: 100%;
-   height: 100%;
-   background-color: black; 
-   background-position: center;
-   background-size: cover;
-   transition:all 0.3s ease-in-out;
-   opacity:1;
-   border: 5px solid #555;
- }
- .card:hover .card-img,
- .card:focus .card-img {
-   transform: scale(1.02);
-   opacity:0.5;
- }
- 
- .card:hover .card-img-overlay{
-     color:#080a7e;
- }
- 
- .card-img-overlay>h4, .card-img-overlay>p{
-     visibility:hidden;
- }
- 
- .card-img-overlay:hover h4, .card-img-overlay:hover p{
-     visibility: visible;
- }
- 
- .card:hover .card-img-overlay p{
-     font-size:1.5em;
-     letter-spacing:0.02em;
- }
-
-
