--- a/Main/css/PlanYourTripFrontCSS.css
+++ b/Main/css/PlanYourTripFrontCSS.css
@@ -46,7 +46,7 @@
 .Container{
     width: 100%;
     max-width: 120rem;
-    padding:0 1.5rem;
+    padding:0 1rem;
     margin: 0 auto;
     margin-bottom: 20px;
 }
@@ -204,7 +204,7 @@ nav{
     border: none;
     width: 100%;
     min-height: 4rem;
-    padding: 1rem;
+    padding: 0.5rem;
     font-weight: bold;
     color: #a5a5a5;
     letter-spacing: 2px;
@@ -325,8 +325,8 @@ nav{
 }
 
 .room-image{
-    width: 100%;
-    height: 100%;
+    width: 500px;
+    height: 350px;
     object-fit: cover;
     /* z-index: -1; */
 }
