--- a/Main/css/style.css
+++ b/Main/css/style.css
@@ -286,6 +286,61 @@ nav{
         /* opacity: 0; 
     } 
 } */
+.hero{
+    width:100%;
+    height: 100vh;
+    background: url(../images/caucasus1.jpg) center no-repeat;
+    background-size: cover;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+    z-index: 0;
+    display: none;
+}
+.hero::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: inherit;
+    height:inherit;
+    background-color: var(--purple-transparent-alt);
+    z-index: -1;
+}
+.main-heading{
+    color: #fff;
+    line-height: 1;
+    text-shadow: 1px 1px 1rem rgba(0,0,0,0.5);
+    margin-bottom: 2.5rem;
+}
+.title2{
+    text-align: center;
+    font-size: 4.8rem;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    opacity: 0;
+}
+@media screen and (min-width:768px){
+    .title2{
+        font-size: 8rem;
+
+    }
+}
+@media screen and (min-width:1000px){
+    .title2{
+        font-size: 12rem;
+    }
+}
+@media screen and (max-width:1000px){
+    .videobackground{
+        display: none;
+    }
+    .hero{
+        display: block;
+    }
+}
 @media screen and (max-width:1329px){
     .destinationsection{
         display: flex;
