--- a/Main/css/hotels.css
+++ b/Main/css/hotels.css
@@ -25,3 +25,16 @@ img{
   ::-webkit-scrollbar-thumb:hover {
     background: #555; 
   }
+  /* .pagination{
+    display: inline-block;
+  }
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  .pagination a:hover{
+    background:crimson;
+    color:white;
+    } */
