--- a/Main/css/roomStyle.css
+++ b/Main/css/roomStyle.css
@@ -17,3 +17,9 @@
   ::-webkit-scrollbar-thumb:hover {
     background: #555; 
   }
+  /* .footer{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    margin-top: 50px;
+  } */
